--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -718,8 +718,16 @@
 <dt>No deductions</dt>
 <dd> <p><strong>Do not </strong>report any amount using box 16 if you <strong>did not</strong> deduct <abbr title="Canada Pension Plan">CPP</abbr>.</p></dd>
 
+<dt>Province of employment is Quebec</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 16 if box 10 shows their province of employment is Quebec, use <a href="#bx_17">box 17</a>.</p>
+     </dd>
+
+<dt><abbr title="Second Canada Pension Plan">CPP2</abbr> contributions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 16 if your employee has reached the first maximum contributions and you deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions from your employee, use <a href="#bx_16a">box 16a</a>.</p>
+     </dd>
+
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the total <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct insurable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the total <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -748,11 +756,6 @@
 <dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
 <dd> Report amounts you remitted for the the self-employed worker's share of <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
 </dd>
-
-<dt>Province of employment is Quebec</dt>
-<dd> <p>Report amounts you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>.</p>
-      <p>Learn more about the:</p>
- </dd>
 
 <dt>Province of employment outside Canada - Detached employee</dt>
 <dd> <p>Report the amount you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if box 10 shows their province or territory of employment is other than Quebec.</p>
