--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -862,7 +862,7 @@ margin-left: 38px;
 
 		
         <details><summary>Tax identifier numbers for corporations</summary>
-        <p>If you are a corporation, you must file your return using a BN <strong>and</strong> an RU program account identifier code.</p> 
+        <p>If you are a corporation, you must file your return using a BN <strong>with</strong> an RU program account identifier code.</p> 
         <details>
 		<summary>Canadian corporations</summary>
 		<p>Refer to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#BRO" target="_blank">Business Registration Online</a> to:</p>
