--- a/subway/lines/adoption/index.html
+++ b/subway/lines/adoption/index.html
@@ -61,18 +61,18 @@
                   <div class="col-md-8">
                    <!--  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
 					 <p>You can claim an amount for eligible adoption expenses related to the adoption of a child who is under 18 years of age at the time that the adoption order is issued or recognized by a government in Canada.</p>
-					 <p>The maximum claim for each child:</p>
+					 
 						<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-  <li class="cnjnctn-col-50"><img src="../flag-ca.jpg" alt=""> <strong>Everyone</strong> can claim a maximum of $17,131 of expenses on the <strong>federal</strong> tax return</li>
-						<li class="cnjnctn-col">In addition, <strong>residents</strong> in certain provinces or territories can <strong>also</strong> claim the expenses on a <strong>provincial or territorial</strong> tax return:
+  <li class="cnjnctn-col-60"><img src="../flag-ca.jpg" alt=""> <strong>Anyone</strong> can claim a maximum of $17,131 in adoption expenses, for each child,  on a <strong>federal</strong> tax return.</li>
+						<li class="cnjnctn-col">In addition, <strong>residents</strong> in certain provinces or territories can  claim the <strong>same expenses</strong> on a <strong>provincial or territorial</strong> tax return, to a <strong>maximum of</strong>:
 						<ul class="list-unstyled">
-						<li> <img src="../flag-ab.jpg" alt=""> Alberta: $13,552 maximum</li>
-						<li><img src="../flag-bc.jpg" alt=""> BC: $17,131 maximum</li>
-						<li><img src="../flag-mn.jpg" alt=""> Manitoba: $10,000 maximum</li>
-						<li><img src="../flag-nl.jpg" alt=""> Newfoundland and Labrador: $13,230 maximum</li>
-						<li><img src="../flag-on.jpg" alt=""> Ontario: $13,593 maximum</li>
+						<li> <img src="../flag-ab.jpg" alt=""> Alberta: $13,552</li>
+						<li><img src="../flag-bc.jpg" alt=""> BC: $17,131</li>
+						<li><img src="../flag-mn.jpg" alt=""> Manitoba: $10,000</li>
+						<li><img src="../flag-nl.jpg" alt=""> Newfoundland and Labrador: $13,230</li>
+						<li><img src="../flag-on.jpg" alt=""> Ontario: $13,593</li>
 						<li><img src="../flag-qc.jpg" alt=""> Quebec: Refer to <a href="https://www.revenuquebec.ca/en/">Revenu Quebec</a></li>
-						<li><img src="../flag-yt.jpg" alt=""> Yukon: $17,131 maximum</li>
+						<li><img src="../flag-yt.jpg" alt=""> Yukon: $17,131</li>
 						
 						</ul>
 						</li>
