--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -684,7 +684,7 @@
 		
 		<li class="code-num">
 
-<details><summary id="bx_16">Box 16 – Employee's CPP contributions</summary>
+<details><summary id="bx_16">Box 16 – Employee's CPP contributions <span class="label label-info">Jeremiah</span></summary>
 	   <p>Report amounts you deducted for your employee's share of the Canada Pension Plan (<abbr title="Canada Pension Plan">CPP</abbr>) contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
                       
             <p><strong>Do not </strong>report the employer's share of CPP contributions on the T4 slip.</p>
@@ -739,6 +739,14 @@
 <dd> <p>Report the amount you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if box 10 shows their province or territory of employment is other than Quebec.</p>
       </dd>
 
+<dt>contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
+<dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> seperate T4 slips as follows:</p>
+          <ul class="list-unstyled cnjnctn-type-and">
+  <li class="cnjnctn-col">1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
+<li class="cnjnctn-col">1 slip showing the province of employment as Quebec, for the QPP contributions you deducted using box 17 and the employee's CPP/QPP pensionable earnings using box 26</li>
+            </ul>      </dd>
+
+
 <p>Learn more on how to determine if you need to deduct <abbr title="Canada Pension Plan">CPP</abbr> contributions from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
 
             </details>
@@ -758,14 +766,8 @@
             <p>If you report an amount in box 17, you have to report pensionable earnings in box 26. </p>
             <p><strong>Do not </strong>report the employer's share of QPP contributions on the T4 slip.</p>
     
- <h4 id="h_16over">What happens if the employee contributed to CPP and QPP during the same year</h4>
-            <p>If your employee contributed to CPP <strong>and </strong>QPP during the year, you have to prepare <strong>2 </strong>T4 slips as follows:</p>
-          <ul class="list-unstyled cnjnctn-type-and">
-	 <li class="cnjnctn-col">1 showing the province of employment as Quebec, the employee's QPP pensionable earnings in Quebec and the QPP contributions you deducted </li>
-             <li class="cnjnctn-col">1 showing the applicable province or territory of employment (other than Quebec), the employee's CPP pensionable earnings and the CPP contributions you deducted </li>
-            </ul>
-
-<h4>Specific situation</h4>
+  
+ <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
