--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -776,11 +776,41 @@ html:lang(fr) .cnjnctn-or:before {
         <p>Where you send your return depends on you (as an individual), or your corporation's location.</p>
         <div class="wb-frmvld mrgn-bttm-xl">
           <form>
-            <div class="wb-fieldflow gc-font-2019" data-wb-fieldflow='{"noForm": true, "defaultselectedlabel": "Select your location", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc, #mail-centre", "class": "hidden", "live": true}]}'>
+            <div class="wb-fieldflow gc-font-2019" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "unhideelm": "#mail-centre",  "defaultselectedlabel": "Select your location", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc, #mail-centre", "class": "hidden", "live": true}]}'>
               <p>Select the location where you reside, or where your corporation is physically located</p>
               <ul>
                 <li>Country
                   <ul>
+		<li>Canada
+<div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "defaultselectedlabel": "Select your province or territory", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc, #mail-centre", "class": "hidden", "live": true}]}'>
+<p>Choose a province or territory</p>
+	<ul>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Alberta</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">British Columbia</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Manitoba</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">New Brunswick</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Newfoundland and Labrador</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Nova Scotia</a></li>
+		<li>Ontario
+		<div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "defaultselectedlabel": "Select your location within Ontario", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc, #mail-centre", "class": "hidden", "live": true}]}'>
+<p>Choose a location within Ontario</p>
+			 <ul>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Barrie</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Sudbury</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Toronto</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Another location in Ontario</a></li>
+                  </ul>
+		</div>
+		</li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Prince Edward Island</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Quebec</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Saskatchewan</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Northwest Territories</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Nunavut</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Yukon</a></li>
+                  </ul>
+</div>		
+		</li>	  
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true},{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-sm", "live": true}]'><a href="#winnipeg_tc">Denmark</a></li>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">France</a></li>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Netherlands</a></li>
@@ -789,35 +819,13 @@ html:lang(fr) .cnjnctn-or:before {
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Another country</a></li>
                   </ul>
                 </li>
-                <li>Province or territory
-                  <ul>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Alberta</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">British Columbia</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Manitoba</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">New Brunswick</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Newfoundland and Labrador</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Nova Scotia</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Prince Edward Island</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Quebec</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Saskatchewan</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Northwest Territories</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Nunavut</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Yukon</a></li>
-                  </ul>
-                </li>
-                <li>Within Ontario
-                  <ul>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Barrie</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Sudbury</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Toronto</a></li>
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Another location in Ontario</a></li>
-                  </ul>
-                </li>
+             
+                
               </ul>
             </div>
           </form>
         </div>
-        <div class="cnjnctn-type-or cnjnctn-sm hidden" id="mail-centre">
+        <div class="cnjnctn-type-or cnjnctn-sm" id="mail-centre">
           <div class="cnjnctn-col" id="winnipeg_tc">
             <h4 class="text-muted">Winnipeg Tax Centre</h4>
             <p>Winnipeg Tax Centre<br>
