--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -758,7 +758,7 @@
 </details>	    	    
 	</li>
 		<li class="code-num">	    
-<details><summary id="bx_17">Box 17 – Employee's QPP contributions</summary>
+<details><summary id="bx_17">Box 17 – Employee's QPP contributions <span class="label label-info">Jeremiah</span></summary>
             
                    <p>Report amounts you deducted for your employee's share of the Quebec Pension Plan (<abbr title="Quebec Pension Plan">QPP</abbr>) contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
                       
