--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -776,12 +776,12 @@ html:lang(fr) .cnjnctn-or:before {
         <p>Where you send your return depends on you (as an individual), or your corporation's location.</p>
         <div class="wb-frmvld mrgn-bttm-xl">
           <form>
-            <div class="wb-fieldflow gc-font-2019" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "hideelm": "#mail-centre",  "defaultselectedlabel": "Select your location", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc, #mail-centre", "class": "hidden", "live": true}]}'>
+            <div class="wb-fieldflow gc-font-2019" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "hideelm": "#mail-centre",  "defaultselectedlabel": "Select your location", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "addClass", "source": "#mail-centre", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc", "class": "hidden", "live": true}]}'>
               <p>Select the location where you reside, or where your corporation is physically located</p>
             
                   <ul>
 		<li>Canada
-<div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "defaultselectedlabel": "Select your province or territory", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc, #mail-centre", "class": "hidden", "live": true}]}'>
+<div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "defaultselectedlabel": "Select your province or territory", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "addClass", "source": "#mail-centre", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc", "class": "hidden", "live": true}]}'>
 <p>Choose a province or territory</p>
 	<ul>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#winnipeg_tc">Alberta</a></li>
@@ -791,7 +791,7 @@ html:lang(fr) .cnjnctn-or:before {
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Newfoundland and Labrador</a></li>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Nova Scotia</a></li>
 		<li>Ontario
-		<div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "defaultselectedlabel": "Select your location within Ontario", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc, #mail-centre", "class": "hidden", "live": true}]}'>
+		<div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "noreqlabel": true, "defaultselectedlabel": "Select your location within Ontario", "reset": [{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}, {"action": "addClass", "source": "#mail-centre", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#winnipeg_tc, #sudbury_tc", "class": "hidden", "live": true}]}'>
 <p>Choose a location within Ontario</p>
 			 <ul>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#winnipeg_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or", "live": true}]'><a href="#sudbury_tc">Barrie</a></li>
