--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -741,9 +741,9 @@
 
 <dt>contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
 <dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> seperate T4 slips as follows:</p>
-          <ul class="list-unstyled cnjnctn-type-and">
-  <li class="cnjnctn-col">1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
-<li class="cnjnctn-col">1 slip showing the province of employment as Quebec, for the QPP contributions you deducted using box 17 and the employee's CPP/QPP pensionable earnings using box 26</li>
+          <ul>
+  <li>1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
+<li>1 slip showing the province of employment as Quebec, for the QPP contributions you deducted using box 17 and the employee's CPP/QPP pensionable earnings using box 26</li>
             </ul>      </dd>
 
 
@@ -753,8 +753,25 @@
 </li>
 		<li class="code-num">
 <details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions</summary>	
+
 <p>For T4 slips filed for calendar year 2024 and after, report the amount of CPP2 contributions you deducted from your employee in box 16A if box 10 shows their province or territory of employment is other than Quebec.</p>
+
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+
+<dt>No deductions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 16a if you <strong>did not</strong> deduct <abbr title="Second Canada Pension Plan">CPP2</abbr>.</p></dd>
+
+<dt>Province of employment is Quebec</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 16a if box 10 shows their province of employment is Quebec, use <a href="#bx_17a">box 17a</a>.</p>
+     </dd>
+
+<dt><abbr title="First Canada Pension Plan">CPP</abbr> contributions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 16a if your employee has not reached the first maximum contributions, use <a href="#bx_16">box 16</a>.</p>
+     </dd>
+</dl>
 <p>The CRA will provide more instructions by the end of 2023. </p>
+
 </details>	    	    
 	</li>
 		<li class="code-num">	    
@@ -797,9 +814,9 @@
 
 <dt>contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
 <dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> seperate T4 slips as follows:</p>
-          <ul class="list-unstyled cnjnctn-type-and">
-  <li class="cnjnctn-col">1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
-<li class="cnjnctn-col">1 slip showing the province of employment as Quebec, for the QPP contributions you deducted using box 17 and the employee's CPP/QPP pensionable earnings using box 26</li>
+          <ul>
+  <li>1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
+<li>1 slip showing the province of employment as Quebec, for the QPP contributions you deducted using box 17 and the employee's CPP/QPP pensionable earnings using box 26</li>
             </ul>      </dd>
 
 
@@ -809,16 +826,31 @@
             </details>  
     </li>
 		<li class="code-num">         
- <details><summary id="bx_17a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 17A – Employee's second QPP (QPP2) contributions</summary>
-<p>For T4 slips filed for calendar year 2024 and after, report the amount of QPP2 contributions you deducted from your employee in box 17A if box 10 shows their province of employment is Quebec.</p>
-<p>The CRA will provide more instructions by the end of 2023.</p>	
+ <details><summary id="bx_17a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 17A – Employee's second QPP (QPP2) contributions <span class="label label-info">Jeremiah</span></summary>
+<p>For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions you deducted from your employee in box 17A if box 10 shows their province or territory of employment is Quebec.</p>
+
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+
+<dt>No deductions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 17a if you <strong>did not</strong> deduct <abbr title="Second Quebec Pension Plan">QPP2</abbr>.</p></dd>
+
+<dt>Province of employment is Quebec</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 17a if box 10 shows their province of employment is other than Quebec, use <a href="#bx_16a">box 16a</a>.</p>
+     </dd>
+
+<dt><abbr title="First Quebec Pension Plan">QPP</abbr> contributions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 17a if your employee has not reached the first maximum contributions, use <a href="#bx_17">box 17</a>.</p>
+     </dd>
+</dl>
+<p>The CRA will provide more instructions by the end of 2023. </p>
 </details>           
         </li>
 
 	<li class="code-num">
 
             <details>
-            <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums <span class="label label-success">Good</span></summary>
+            <summary id="bx_18">Box 18 – Employee's EI premiums <span class="label label-success">Good</span></summary>
             <p>Report amounts you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
                       
             <p><strong>Do not </strong>report the employer's share of EI premiums on the T4 slip.</p>
