--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -769,6 +769,11 @@
 <dt><abbr title="First Canada Pension Plan">CPP</abbr> contributions</dt>
 <dd> <p><strong>Do not </strong>report any amount using box 16a if your employee has not reached the first maximum contributions, use <a href="#bx_16">box 16</a>.</p>
      </dd>
+
+<dt>Over or under deductions</dt>
+<dd><p>The reporting is the same if you over deducted or under deducted <abbr title="Second Canada Pension Plan">CPP2</abbr>, use the instruction in <a href="#bx_16">box 16</a>.</p>
+              </dd>
+
 </dl>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 
@@ -842,6 +847,11 @@
 <dt><abbr title="First Quebec Pension Plan">QPP</abbr> contributions</dt>
 <dd> <p><strong>Do not </strong>report any amount using box 17a if your employee has not reached the first maximum contributions, use <a href="#bx_17">box 17</a>.</p>
      </dd>
+
+<dt>Over or under deductions</dt>
+<dd><p>The reporting is the same if you over deducted or under deducted <abbr title="Second Quebec Pension Plan">QPP2</abbr>, use the instruction in <a href="#bx_17">box 17</a>.</p>
+              </dd>
+
 </dl>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 </details>           
