--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -739,7 +739,7 @@
 <dd> <p>Report the amount you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if box 10 shows their province or territory of employment is other than Quebec.</p>
       </dd>
 
-<dt>contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
+<dt>Contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
 <dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> seperate T4 slips as follows:</p>
           <ul>
   <li>1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
@@ -752,7 +752,7 @@
             </details>
 </li>
 		<li class="code-num">
-<details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions</summary>	
+<details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions <span class="label label-info">Jeremiah</span></summary>	
 
 <p>For T4 slips filed for calendar year 2024 and after, report the amount of CPP2 contributions you deducted from your employee in box 16A if box 10 shows their province or territory of employment is other than Quebec.</p>
 
@@ -817,7 +817,7 @@
 <dd> Report amounts you remitted for the the self-employed worker's share of <abbr title="Quebec Pension Plan">QPP</abbr> contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
 </dd>
 
-<dt>contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
+<dt>Contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
 <dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> seperate T4 slips as follows:</p>
           <ul>
   <li>1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
