--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1019,9 +1019,6 @@
         </ul>
   </dd>
 
-<dt></dt>
-<dd></dd>
-
 </dl>    
             </details>
 </li>
@@ -1031,9 +1028,10 @@
 		<li class="code-num">
             <details>
             <summary id="bx_26">Box 26&nbsp;– CPP/QPP pensionable earnings</summary>
-            <p><strong>You must report </strong>an amount in Box 26.</p>
-            <p>Report the <strong>total </strong>amount of pensionable earnings paid to your employee, up to the maximum pensionable earnings for the year, even if you did not withhold CPP/QPP contributions on all or any of those earnings. In many cases, boxes 14 and 26 will be the same amount.</p>
-            <p>Report "0" if there are no pensionable earnings and there is no amount in boxes 16 or 17.</p>
+ <p>Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's CPP/QPP contributions (or the self-employed fisher, barber and hairdresser, taxi driver and driver of other passenger‑carrying vehicles) that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings for the year.</p>
+            <p>Report "0" if the employee or the self-employed worker had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
+		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
+
             <h4>Non-cash taxable benefits (including security option benefits)</h4>
             <p>If you give pensionable non-cash taxable benefits, report their value in box 26, even if the employee received no other remuneration. For example, if your employee is on an unpaid leave of absence and you continue to provide benefits during the leave period, report the benefit in box 26.</p>
             <h4>CPP</h4>
@@ -1053,15 +1051,7 @@
             <p><strong>Do not </strong>change the amount in box 14. The amounts above need to be reported in box 14.</p>
             <h4>QPP </h4>
             <p>Fill in box 26 if you deducted QPP from the employees' earnings, regardless of their province or territory of residence.</p>
-            <h5>More than one T4 slip for the same employee</h5>
-            <p>When you give the same employee more than one T4 slip for the year, you should report the pensionable earnings amount for each period of employment in box 26 of each T4 slip.</p>
-            <details><summary>Example</summary>
-            <p>An employee earned $35,000 working in Ontario from January 2021 to June 2021 and earned $35,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 26 as follows:</p>
-            <ul>
-            <li>Ontario T4 slip &ndash; box 14 = $35,000, and box 26 = $35,000 </li>
-            <li>Quebec T4 slip &ndash; box 14 = $35,000, and box 26 = $26,600 (calculated as the maximum pensionable earnings for 2021 of $61,600 &ndash; $35,000 already reported on T4 slip with Ontario as province of employment = $26,600) on the Quebec T4 slip </li>
-            </ul>
-	</details>
+          
             <h4>Benefits and earnings taxable only in Quebec</h4>
             <p>Revenu Québec considers certain benefits and earnings to be pensionable earnings for employees working in Quebec. These include:</p>
             <ul>
@@ -1081,25 +1071,51 @@
 		    <details><summary>Example 3 &ndash; Benefit is taxable both federally and in Quebec</summary>
             <p>Stephane works for his employer in Quebec and did not receive any cash earnings. However, his employer gave him a non-cash housing benefit valued at $1,100. When preparing Stephane's Quebec T4 slip, his employer will report $1,100 in boxes 14 and 26, and fill in any other boxes on his T4 slip as applicable.</p>
         </details>    
-	<h4>Reporting the correct CPP pensionable earnings</h4>          
-            <p>Reporting the correct CPP pensionable earnings in box 26 will reduce unnecessary pensionable and insurable earnings review (PIER) reports for CPP deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p>
+	
 
-  <h4>Specific situation</h4>
+    
+    <h4>Specific situations</h4>
 <dl class="dl-horizontal">
+<dt>No CPP/QPP contributions deductions required</dt>
+<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have CPP/QPP contributions deducted using box 26. </p>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd></dd>
+<p>The unpaid portion of any earnings from pensionable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities.</p>
 
-<dt>Province of employment outside Canada - Detached employee</dt>
-<dd>Report the amount you deducted for XXX using box 26</dd>
+<p>Learn more:</p>
+<ul> 
+<li><a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></li>
+<li> <a href="/cra-arc/payroll/calculate/payment/index.html">Determine the tax treatment of payments other than regular employment income</a></li>
+</ul>
+</dd>
 
-<dt>Add title</dt>
-<dd>Add situation</dd>
+<dt>More than 1 slip for the same employee</dt>
+<dd><p>Report the pensionable earnings amount for each period of employment in box 26 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
+            <details><summary>Example</summary>
+            <p>An employee earned $35,000 working in Ontario from January 2021 to June 2021 and earned $35,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 26 as follows:</p>
+            <ul>
+            <li>Ontario T4 slip &ndash; box 14 = $35,000 and box 26 = $35,000 </li>
+            <li>Quebec T4 slip &ndash; box 14 = $35,000 and box 24 = $26,600 (calculated as the maximum pensionable earnings for 2021 of $61,600 &ndash; $35,000 already reported on T4 slip with Ontario as province of employment = $26,600) </li>
+            </ul> </details>
+            </dd>
+
+<dt>Correct deduction errors</dt>
+<dd><p>Report the correct CPP pensionable earnings in box 64. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for CPP deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
+    <p>Learn more:</p> 
+  <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
+<li><a href="/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a> </li>
+        </ul>
+  </dd>
+
 </dl>   
             </details>
            </li>
 	
-	<li class="code-num">
+	
+
+   
+
+<li class="code-num">
 		     <details>
             <summary id="bx_28">Box 28&nbsp;– Exempt (CPP/QPP, EI, and PPIP)</summary>
             <h3 id="h_28cpp">CPP/QPP </h3>
@@ -1119,6 +1135,7 @@
             <p>Leave box 28 blank if you reported an amount in box 55 or 56. </p>
             <p>Enter an "X" or a check mark in the "PPIP" box only if you did not have to withhold PPIP premiums from the earnings for the <strong>entire </strong>period of employment <strong>in the province of Quebec</strong>. </p>
             <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
+
 
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
