--- a/payroll/calculate/when/index.html
+++ b/payroll/calculate/when/index.html
@@ -129,7 +129,7 @@
 
 			<h2 id="h_0">Background</h2>
 			 <p>After you have determined that you are an <a href="#employer" aria-controls="mid-screen" class="overlay-lnk" role="button">employer, a trustee or a payer of other amounts <span class="far fa-question-circle"></span></a> and have opened a <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a>, you have to calculate the CPP contributions, EI premiums, and income tax to deduct from amounts you pay your employees.</p>
-			<p>You also have to calculate your share of your employee's CPP contributions and EI premiums.</p>
+			<p>You also have to calculate your share of CPP contributions and EI premiums.</p>
             <h2 id="h_1">What to consider when calculating source deductions and contributions</h2>
             <p>When you calculate source deductions and contributions, you have to consider <strong>all</strong> of the following:</p>
            <ul class="fa-ul">
@@ -140,7 +140,7 @@
 	      <li><span class="fas fa-check fa-li text-success"></span> The <strong>province of employment </strong> </li>    
             </ul>
             <h2 id="h_2">Your responsibilities  </h2>
-            <p>Every amount you deduct or withhold or collect as an employer or a payer is deemed to be held in trust for the government until you remit the amount to the government in the manner and at the time prescribed by income tax taw. Such amounts constitute a separate fund that is <strong>not part of your property</strong>.</p>
+            <p>Every amount you deduct or withhold or collect as an employer or a payer is deemed to be held in trust for the government until you remit the amount to the government in the manner and at the time prescribed by income tax law. Such amounts constitute a separate fund that is <strong>not part of your property</strong>.</p>
           
 	
 
@@ -176,11 +176,11 @@
 <h2 id="h_5">What if you do not withhold deductions</h2>
 <p>The CRA will apply a penalty and charge interest.</p>
 <h3 id="h_0_1">Penalty</h3>
-<p>The penalty is assessed when the required CPP, EI, and income tax were not deducted. The penalty is:</p>
+<p>A penalty is assessed when the required CPP, EI, and income tax were not deducted. The penalty is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">10% of the amounts  that were not deducted  </li>
-<li class="cnjnctn-col">20% for second or later failures in a calendar year, if they were made knowingly or under circumstances of gross negligence </li>
+<li class="cnjnctn-col">10% of the amounts that were not deducted  </li>
+<li class="cnjnctn-col">20% of the amounts that were not deducted for a second or additional failures in a calendar year, if they were made knowingly or under circumstances of gross negligence </li>
 </ul>
 <h3 id="h_0_2">Interest</h3>
 <p>If you do not pay an amount that is due, the CRA may apply interest from the day the payment was due. </p>
