--- a/payroll/calculate/when/learnei.html
+++ b/payroll/calculate/when/learnei.html
@@ -151,7 +151,7 @@
 </ul>
  
  <h2 id="h_2">When to deduct EI premiums</h2>
-<p>You have to deduct EI premiums from your employee’s insurable earnings if the employee is in insurable employment during the year. </p>
+<p>You have to deduct EI premiums from your employee’s insurable earnings. </p>
 <p>EI premiums:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
@@ -166,7 +166,7 @@
       
 <h2 id="h_5">When to stop deducting EI premiums</h2>
  <div id="ajax-stopei">
-  <p>For current employees, <strong>stop</strong> deducting EI premiums when the employee <strong>reaches the maximum premium</strong> for the year in their <strong>employment with you</strong>.</p>
+  <p>For current employees, <strong>stop</strong> deducting EI premiums <strong>when the employee’s annual insurable earnigns reach the maximum insurable earnings or the maximum employee premium</strong> for the year in their <strong>employment with you</strong>.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-10.html">Pensionable and insurable earnings - CPP/EI explained</a> </p>  
 </div>
 
@@ -199,12 +199,12 @@
 </details>    
 
 <details><summary>What happens when an employer is <strong>restructuring</strong></summary>
-<p id="h_0_2">Where there was an employer restructuring, the successor employer may consider the amounts of EI previously deducted, remitted or paid by the former employer for the employment of the employees for the year as if they had been deducted, remitted, or paid by the successor employer. </p>
+<p id="h_0_2">Where there was an employer restructuring, the successor employer may consider the EI premiums previously deducted, remitted or paid by the former employer for the employment of the employees for the year as if they had been deducted, remitted, or paid by the successor employer. </p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/employer-restructuring-succession-employers.html">Employer restructuring/Succession of employers - CPP/EI explained </a></p>
 </details> 
 
  <h2 id="h_9">What to do if you have employees whose province of employment is Quebec</h2>
-<p>If you have employees whose province of employment is Quebec, <strong>regardless of your employee's province or territory of residence</strong>, you have to deduct a reduced employment insurance (EI) premium using the <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a> in addition to the QPIP premiums.</p>
+<p>If you have employees whose province of employment is Quebec, <strong>regardless of your employee's province or territory of residence</strong>, you have to deduct a reduced employment insurance (EI) premium using the <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a> in addition to the Québec Parental Insurance Plan (QPIP) premiums.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></p>
 
        <details><summary>What to do if you <strong>transfer an employee between Quebec and another province or territory</strong></summary>
