--- a/payroll/calculate/when/learnit.html
+++ b/payroll/calculate/when/learnit.html
@@ -157,7 +157,7 @@
 </ul>
 
 <h2 id="h_2">When to deduct income tax</h2>
-<p>You are responsible for deducting income tax from the remuneration or other income you pay to your employees</p>
+<p>You are responsible for deducting income tax from the remuneration or other income you pay to your employees.</p>
 <p>Income tax deductions:</p>
 
 <ul class="list-unstyled cnjnctn-type-and ">
@@ -166,7 +166,7 @@
 <li class="cnjnctn-col">have no maximum deduction amount or maximum earnings for deductions to be taken from</li>
 <li class="cnjnctn-col">have no employer contribution </li>
 </ul>
-<p>To determine how much income tax to deduct, you may need the following to determine the employee's tax deductions, including the basic personal amount:</p>
+<p>To determine how much income tax to deduct, you may need the following to determine the employee's income tax deductions, including the basic personal amount:</p>
 
   <ul class="fa-ul">
 	      <li><span class="fas fa-check fa-li text-success"></span> Federal form - TD1: To be filled out by individuals that have a new employer or payer, or want to change amounts from previous amounts claimed, or want to claim the deduction for living in a prescribed zone or want to increase income tax deductions </li>
@@ -191,7 +191,8 @@
                   <li><span class="fas fa-check fa-li text-success"></span> Employee's contributions to a retirement compensation arrangement (RCA) or certain pension plans</li>
                   <li><span class="fas fa-check fa-li text-success"></span> Premiums under a  registered retirement savings plan (RRSP) provided you have reasonable grounds to believe the employee can deduct the premiums  for the year </li>
                   <li><span class="fas fa-check fa-li text-success"></span> Employee's contributions to a pooled registered pension plan (PRPP), or a specified pension plan (which includes the Saskatchewan Pension Plan) , as long as the plan is registered with the Minister of National Revenue and you have reasonable grounds to believe the employee can deduct the contributions for the year </li>
-                  <li><span class="fas fa-check fa-li text-success"></span> First and second additional contributions to the CPP made by the employee  </li>
+                  <li><span class="fas fa-check fa-li text-success"></span> <span class="label label-warning">Beginning January 1, 2023</span> First and second additional contributions to the CPP made by the employee  </li>
+<li><span class="fas fa-check fa-li text-success"></span> <span class="label label-warning">Beginning April 1, 2023</span> Employee’s contributions to a First Home Retirement Savings Account (FHSA) and you have reasonable grounds to believe the employee can deduct the contribution for the year</li>
                </ul>
                <details>
                   <summary>Calculation example</summary>
