--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -95,6 +95,8 @@
   <h1 property="name" id="wb-cont" class="gc-thickline">Second additional CPP (CPP2) contribution rates and maximums</h1>
 <div class="alert alert-warning">
 <p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> is reached, you must deduct the second additional CPP (CPP2) contributions using the following rates and maximums.</p>
+<p>Learn more:<a href="/cra-arc/payroll/calculate/when/learncpp.html#h_10">What is the CPP enhancement</a> </p>
+
 </div>	
   <p>For each year <strong>on or after January 1, 2024</strong>, the CRA provides the:</p>
   <ul class="fa-ul">
