--- a/payroll/calculate/when/learnei.html
+++ b/payroll/calculate/when/learnei.html
@@ -166,7 +166,7 @@
       
 <h2 id="h_5">When to stop deducting EI premiums</h2>
  <div id="ajax-stopei">
-  <p>For current employees, <strong>stop</strong> deducting EI premiums <strong>when the employee’s annual insurable earnigns reach the maximum insurable earnings or the maximum employee premium</strong> for the year in their <strong>employment with you</strong>.</p>
+  <p>For current employees, <strong>stop</strong> deducting EI premiums <strong>when the employee’s annual insurable earnings reach the maximum insurable earnings or the maximum employee premium</strong> for the year in their <strong>employment with you</strong>.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-10.html">Pensionable and insurable earnings - CPP/EI explained</a> </p>  
 </div>
 
