--- a/payroll/calculate/when/learnit.html
+++ b/payroll/calculate/when/learnit.html
@@ -121,7 +121,7 @@
             <ul>
                <li><a href="#h_1">What are taxable earnings</a></li>
                <li><a href="#h_2">When to deduct income tax</a></li>
-               <li><a href="#h_3">What types of deductons will reduce remuneration subject to tax</a></li>
+               <li><a href="#h_3">What types of deductions will reduce remuneration subject to tax</a></li>
              <li><a href="#h_6">What if the employee has different jobs</a></li>
                <li><a href="#h_9">What to do if you have employees whose province of employment is Quebec</a></li>
               <li><a href="#h_10">What to do if your employee requested to increase income tax deductions</a></li> 
@@ -130,7 +130,7 @@
             </ul>
 
 <h2 id="h_1">What are taxable earnings</h2>
-<p>As an employer, you are required to deduct federal and provincial or territorial income tax from remuneration and other income. </p>
+<p>As an employer or a payer, you are required to deduct federal and provincial or territorial income tax from remuneration and other income. </p>
 <p>You need to determine which provincial or territorial income tax you are required to deduct based on the <strong>province of employment of the employee</strong>. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/poe.html">Determine the province of employment (POE)</a></p>
 
